--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ carbon-api==0.1
 carbonsh==0.2.0
 certifi==2022.12.7
 Django==4.1.5
+django-cors-headers==3.13.0
 djangorestframework==3.14.0
 importlib-metadata==6.0.0
 pyee==8.2.2
